<resources>
    <string name="app_name">Выгул собак</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Сабанов Алексанр</string>
    <string name="nav_header_subtitle">Оценка 5.0</string>
    <string name="nav_header_desc">Твоя карточка</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Карта</string>
    <string name="menu_pets">Животные</string>
    <string name="menu_pays">Способы оплаты</string>
    <string name="menu_account_settings">Настройки аккаунта</string>
    <string name="menu_address">Мои адреса</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_information">Информация</string>
    <string name="order_choosing_address">Выбор адреса</string>
    
    <string name="pets_change"><u>Изменить</u></string>

    <string-array name="pets">
        <item>Бультерьер</item>
        <item>Бигль</item>
    </string-array>
</resources>