<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/nav_pets"
            android:title="@string/menu_pets" />
        <item
            android:id="@+id/nav_pays"
            android:title="@string/menu_pays" />
        <item
            android:id="@+id/nav_account_settings"
            android:title="@string/menu_account_settings" />
        <item
            android:id="@+id/nav_address"
            android:title="@string/menu_address" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_information"
            android:title="@string/menu_information" />


    </group>
</menu>